# Concerts-Wrapped

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: format.yml
src/: Main.cpp  Utilities.cpp  Utilities.h
src/models/: Concert.cpp  Concert.h
src/models/include/: Artist.h  Concert.h  Performance.h
src/models/src/: Artist.cpp  Concert.cpp  Performance.cpp
src/repositories/: ConcertRepository.cpp  ConcertRepository.h
src/repositories/include/: ConcertRepository.h
src/repositories/src/: ConcertRepository.cpp
src/screens/include/: screenManager.h
src/screens/src/: screenManager.cpp
src/services/: ConcertStatsManager.cpp  ConcertStatsManager.h  StatsManager.cpp  StatsManager.h  StorageManager.cpp  StorageManager.h  ValidationManager.cpp
src/services/include/: ArtistStatsManager.h  ConcertStatsManager.h  Logger.h  StorageManager.h  Utilities.h  ValidationManager.h
src/services/src/: ArtistStatsManager.cpp  ConcertStatsManager.cpp  Logger.cpp  Utilities.cpp  ValidationManager.cpp
